# AgentShell

./: .gitignore  README.md  TEST_SUMMARY.md  pyproject.toml  run_tests.py  zsh_setup.sh
agentshell/: __init__.py  lxd_executor.py  main.py  ollama_client.py  session.py
tests/: README.md  __init__.py  test_integration.py  test_ollama_client.py  test_safety_checker.py  test_script_extraction.py  test_session.py
