[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentshell"
version = "0.1.0"
description = "AI-powered system interface: natural language → bash scripts → sandboxed execution"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
agentshell = "agentshell.main:main"
ash = "agentshell.main:main"
